# class-names-visualizer

./: .gitignore  LICENSE  Readme.MD  docker-compose.yml
frontend/: Dockerfile  package.json
frontend/src/: App.js  app.css  index.css
server/: Dockerfile  app.py  classnamer_reader.py  config.py  page_reader.py  pyproject.toml  requirements.txt  router.py
