[tool.poetry]
name = "server-class-names-visualizer"
version = "0.1.0"
description = ""
authors = ["Eyal Segal <segaleseo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
pyodbc = "^4.0.32"
gunicorn = "^20.1.0"
requests = "^2.27.1"
bs4 = "^0.0.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
